--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "numeral": "^2.0.6",
     "pinia": "^2.0.9",
     "vue": "^3.2.25",
+    "vue-i18n": "9",
     "vue-router": "4"
   },
   "devDependencies": {
