--- a/docker/Dockerfile.multiarch
+++ b/docker/Dockerfile.multiarch
@@ -5,9 +5,10 @@ ARG TARGETPLATFORM
 ARG TARGETARCH
 ARG TARGETOS
 RUN --mount=type=cache,sharing=private,target=/var/cache/apt --mount=type=cache,sharing=private,target=/var/lib/apt/lists goxx-apt-get install -y binutils gcc g++ pkg-config make wget ca-certificates tzdata flex bison libpcap-dev
-RUN mkdir -p /dist/api
-WORKDIR /build
-COPY ./api /build
+RUN mkdir -p /dist/api /build/api /build/i18n
+WORKDIR /build/api
+COPY ./i18n /build/i18n
+COPY ./api /build/api
 COPY ./upgrades /dist/upgrades
 COPY ./templates /dist/templates
 RUN --mount=type=cache,target=/root/.cache --mount=type=cache,target=/go/pkg/mod CGO_ENABLED=1 goxx-go build -ldflags "-linkmode external -extldflags -static" --tags "linux sqlite_foreign_keys=1" -o /dist/api/facemasq .
@@ -15,7 +16,8 @@ RUN chmod +x /dist/api/facemasq
 
 FROM --platform=$BUILDPLATFORM node:16 as vuedeps
 RUN curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm
-RUN mkdir -p /build/dist/web /build/web
+RUN mkdir -p /build/dist/web /build/web /buld/i18n
+COPY ./i18n /build/i18n
 COPY ./web /build/web
 WORKDIR /build/web
 RUN pnpm install --frozen-lockfile
@@ -23,15 +25,16 @@ RUN pnpm list
 RUN pnpm build
 
 FROM scratch
-WORKDIR /app/data
-WORKDIR /app/config
 COPY --from=godeps /dist /app
 COPY --from=vuedeps /build/dist/web /app/web
 COPY --from=godeps /etc/ssl/certs /etc/ssl/certs
 COPY --from=godeps /usr/share/zoneinfo /usr/share/zoneinfo
 COPY ./upgrades /app/upgrades
 COPY ./templates /app/templates
+COPY ./i18n /app/i18n
 
 ENV TZ=Etc/UTC
+VOLUME /app/data
+VOLUME /app/export
 WORKDIR /app/api
 CMD ["/app/api/facemasq"]
