--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "facemasq-docs",
-  "version": "0.0.1",
+  "version": "0.0.5-alpha",
   "description": "",
   "main": "index.js",
   "scripts": {
