--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "facemasq-docs",
-  "version": "0.0.5-alpha",
+  "version": "0.0.5-alpha.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -21,5 +21,4 @@
       ]
     }
   }
-
 }
