--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "facemasq",
-  "version": "0.0.5-alpha",
+  "version": "v0.1.0-alpha.5",
   "scripts": {
     "dev": "vite --host",
     "build": "vue-tsc --noEmit && vite build --emptyOutDir",
