--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "facemasq",
-  "version": "0.1.0-alpha.6",
+  "version": "0.1.0-beta.0",
   "description": "",
   "main": "index.js",
   "scripts": {
