--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "@mdi/js": "^6.5.95",
     "@vueuse/core": "^7.7.1",
     "chart.js": "^3.7.0",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.28.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "@types/chart.js": "^2.9.37",
+    "@types/crypto-js": "^4.1.1",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.isequal": "^4.5.5",
     "@types/node": "^17.0.8",
@@ -30,17 +32,17 @@
     "@typescript-eslint/parser": "^5.9.1",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/eslint-config-typescript": "^11.0.1",
-    "autoprefixer": "^10.4.1",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-prettier-vue": "^4.2.0",
     "eslint-plugin-vue": "^9.4.0",
-    "postcss": "^8.4.5",
+    "postcss": "^8.4.19",
     "postcss-import": "^14.0.2",
     "prettier": "^2.7.1",
     "sass": "^1.45.2",
-    "tailwindcss": "^3.0.11",
+    "tailwindcss": "^3.2.3",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.5.4",
